try to fix image rescaling on mobile again pt 4

--- a/assets/main.css
+++ b/assets/main.css
@@ -48,10 +48,9 @@ img {
   vertical-align: middle; }
 
 .content {
-  display: block;
-  max-width:450px;
+  width:450px;
   max-height:400px;
-  width: auto;
+  width: 100%;
   height: auto;
 }
 /**
